Added Google Analytics tracker

--- a/food-and-cloths-bank.html
+++ b/food-and-cloths-bank.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168124272-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-168124272-1');
+    </script>
     <meta charset="UTF-8">
     <title>DEIGEX - Helping the Americas | Food & Cloths Bank Program</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,7 +44,6 @@
 
     <!--=============================== Menu-Bar ========================-->
     <div id="menuBar-charity">
-
       <div class="menuBar">
           <nav class="navbar navbar-default ">
               <div class="container p0">
@@ -76,38 +84,14 @@
                                      role="button" aria-expanded="false" title="Our causes">OUR CAUSES</a>
                                   <ul class="dropdown-menu" role="menu">
                                       <li><a href="our-causes.html">OUR CAUSES </a></li>
-                                      <li><a href="our-causes-2-columns.html">OUR CAUSES 2 COLUMNS</a></li>
-                                      <li><a href="our-causes-3-columns.html">OUR CAUSES 3 COLUMNS</a></li>
-                                      <li><a href="single-causes.html">SINGLE CAUSES</a></li>
+                                      <li><a href="our-causes.html#food-cloths-program">FOOD & CLOTHS BANK PROGRAM</a></li>
+                                      <li><a href="our-causes.html#covid-19-protection">PROVIDE COVID-19 PROTECTION</a></li>
+                                      <li><a href="our-causes.html#fair-trade">FAIR TRADE PROJECT</a></li>
+                                      <li><a href="our-causes.html#giving-tuesday">GIVING TUESDAY NOW</a></li>
                                   </ul>
                               </li>
-                              <!-- <li class="dropdown">
-                                  <a href="" class="dropdown-toggle" data-toggle="dropdown"
-                                     role="button" aria-expanded="false" title="News">NEWS</a>
-                                  <ul class="dropdown-menu" role="menu">
-                                      <li><a href="news.html">NEWS LIST</a></li>
-                                      <li><a href="news-2-columns.html">NEWS 2 COLUMNS</a></li>
-                                      <li><a href="news-3-columns.html">NEWS 3 COLUMNS</a></li>
-                                      <li><a href="blog-single.html">SINGLE POST</a></li>
-                                  </ul>
-                              </li> -->
-                              <li class="dropdown">
-                                  <a href="" class="dropdown-toggle" data-toggle="dropdown"
-                                     role="button" aria-expanded="false" title="Shop">VOLUNTEER</a>
-                                  <ul class="dropdown-menu" role="menu">
-                                      <li ><a href="http://connectbrevard.org/PubApps/nteeSearch.php?gQry=allMajor&codeType=NTEE">ACTIVITY CODES</a></li>
-                                      <!-- <li ><a href="shop-product.html">SHOP PRODUCT</a></li> -->
-                                  </ul>
-                              </li>
-                              <!-- <li class="dropdown">
-                                  <a href="" class="dropdown-toggle" data-toggle="dropdown"
-                                     role="button" aria-expanded="false" title="Shop">FAIR TRADE STORE</a>
-                                  <ul class="dropdown-menu" role="menu">
-                                      <li ><a href="shop.html">SHOP PAGE</a></li>
-                                      <li ><a href="shop-product.html">SHOP PRODUCT</a></li>
-                                  </ul>
-                              </li> -->
-                              <li class="last"><a href="contact.html" class="contact" title="Contact">CONTACT</a></li>
+                              <li class="last"><a href="volunteer.html" class="contact" title="Contact">VOLUNTEER</a></li>
+                              <li class="last"><a href="contact.html" class="contact" title="Contact">CONTACT US</a></li>
                               <li class="last"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KYC8EQMRQY9VJ&source=url"
                                 class="contact" title="Contact">DONATE</a></li>
                           </ul>
@@ -123,10 +107,10 @@
     <!--=============================== Banner ==========================-->
     <div class="banner">
         <div class="shadow-main">
-            <h1> Food & Cloths Bank Program </h1>
+            <h1> FCB Program </h1>
             <ul class="breadcrumb breadcrumb-news">
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="our-causes.html">FOOD & CLOTHS BANK PROGRAM</a></li>
+                <li><a href="food-and-cloths-bank.html">FOOD & CLOTHS BANK PROGRAM</a></li>
             </ul>
         </div>
     </div>
