--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168124272-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-168124272-1');
+    </script>
     <meta charset="UTF-8">
     <title>THX - Charity HTML Template | Contact</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
