tropical storm changes

--- a/amanda-tropical-storm.html
+++ b/amanda-tropical-storm.html
@@ -250,6 +250,8 @@
 
                 		<!--=================== Categories ===========-->
                 		<div class="categories">
+
+                      <h2>All Donations Are 100% Tax Deductible</h2>
                       <div class="buttons">
                           <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KYC8EQMRQY9VJ&source=url"
                           class=" red-btn red-btn-4">Donate to the El Salvador Relief Fund    Click Here</a>
@@ -313,10 +315,19 @@
                 </div>
                 <div class="col-md-6 col-sm-12 col-xs-12 ">
                     <div class="buttons">
+                        <br>
+                        <h3>All Donations Are 100% Tax Deductible</h3>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 col-xs-12 ">
+                    <div class="buttons">
                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KYC8EQMRQY9VJ&source=url"
                         class=" red-btn red-btn-4">Donate to the Amanda Tropical Storm Relief Fund for El Salvador</a>
                     </div>
                 </div>
+
+
+
             </div> <!--  /.row mb-causes mb-causes-top -->
 
 
