--- a/index.html
+++ b/index.html
@@ -259,14 +259,13 @@
                         <div class="person-img">
                             <a href="our-causes.html#fair-trade" class="img-link">
                                 <span><i class="icon-eye" aria-hidden="true"></i></span>
-                                <img src="https://www.deigex.com/assets/images/fair-trade-370x300.png" alt="" class="img">
+                                <img src="https://www.deigex.com/assets/images/tropical-storm-370x300.png" alt="" class="img">
                             </a>
                         </div>
                         <div class="person-content">
-                            <h3><a href="our-causes.html#fair-trade" class="title-white">Fair Trade Project</a></h3>
-                            <p>They have art, passion, and hard work on their hands. We are here to open
-                              doors to help them thrive in their small entrepreneurships to help them
-                              become sosteinable in time. </p>
+                            <h3><a href="our-causes.html#fair-trade" class="title-white">El Salvador Relief Fund</a></h3>
+                            <p>El Salvador, the smallest country in Latin America, is facing colossal tropical storms, during the peak
+                              of the COVID-19 crisis. More than 100,000 people have been affected in El Salvador due to the tropical Storm.</p>
                         </div>
                     </div>
 
