--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <div class="col-lg-4 col-md-4 col-sm-6">
                     <div class="person-card ">
                         <div class="person-img">
-                            <a href="our-causes.html#fair-trade" class="img-link">
+                            <a href="amanda-tropical-storm.html" class="img-link">
                                 <span><i class="icon-eye" aria-hidden="true"></i></span>
                                 <img src="https://www.deigex.com/assets/images/tropical-storm-370x300.png" alt="" class="img">
                             </a>
