Thank you for your donation - reviewed

--- a/thank-you-for-your-donations.html
+++ b/thank-you-for-your-donations.html
@@ -130,7 +130,7 @@
                             <div class="person-content">
                                 <ul class="gb-list">                         </ul>
                                 <!-- <h1>Thank You!</h1> -->
-                                <h2>In the name of many people who will benefit with your we <i>THANK YOU!</i></h2>
+                                <h2>In the name of many people who will benefit with your donation, we <i>THANK YOU!</i></h2>
 
 
                                 <!--====================== Quota ========================-->
