Tropical storm re-reviewed

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                             </a>
                         </div>
                         <div class="person-content">
-                            <h3><a href="our-causes.html#fair-trade" class="title-white">El Salvador Relief Fund</a></h3>
+                            <h3><a href="amanda-tropical-storm.html" class="title-white">El Salvador Relief Fund</a></h3>
                             <p>El Salvador, the smallest country in Latin America, is facing colossal tropical storms, during the peak
                               of the COVID-19 crisis. More than 100,000 people have been affected in El Salvador due to the tropical Storm.</p>
                         </div>
