--- a/thank-you/Thank You General - International Technological University.html
+++ b/thank-you/Thank You General - International Technological University.html
@@ -19,7 +19,7 @@
 
 <script>
 setTimeout(function () {
-   window.location.href= 'https://myitu.force.com/apply/TX_SiteLogin?startURL=/apply/TargetX_Portal__PB';
+   window.location.href= 'https://myitu.force.com/apply/TX_CommunitiesSelfReg';
 }, 2000);
 </script>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -801,7 +801,7 @@ setTimeout(function () {
                         <div class="column logoContainer" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;flex: 1;box-sizing: border-box !important;"><div class="mcnImageBlock mcnImageBlockInner" style="padding: 9px;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
     <div class="mcnImageContent" style="display: flex;padding-right: 9px;padding-left: 9px;padding-top: 0;padding-bottom: 0;justify-content: flex-start;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
 
-        <a href="https://myitu.force.com/apply/TX_SiteLogin?startURL=/apply/TargetX_Portal__PB" title="" class="" target="" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
+        <a href="https://myitu.force.com/apply/TX_CommunitiesSelfReg" title="" class="" target="" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
         <img alt="International Technological University" src="./Thank You General - International Technological University_files/0597eb3a-31e9-4350-9ebb-6f950f07982e.png" width="auto" style="max-width: 100%;align-self: center;flex: 0 0 auto;box-shadow: none;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;border: 0;height: auto;outline: none;text-decoration: none;vertical-align: bottom;box-sizing: border-box !important;max-height: 400px !important;" class="mcnImage">
         </a>
 
