--- a/thank-you/Thank You General - International Technological University.html
+++ b/thank-you/Thank You General - International Technological University.html
@@ -19,8 +19,8 @@
 
 <script>
 setTimeout(function () {
-   window.location.href= 'https://myitu.force.com/apply/TX_CommunitiesSelfReg';
-}, 5000);
+   window.location.href= 'https://admissions.itu.edu/#!/';
+}, 2000);
 </script>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script async="" src="./Thank You General - International Technological University_files/c6525e21f3900580d7dd5ae03.js.download"></script>
@@ -801,7 +801,7 @@ setTimeout(function () {
                         <div class="column logoContainer" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;flex: 1;box-sizing: border-box !important;"><div class="mcnImageBlock mcnImageBlockInner" style="padding: 9px;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
     <div class="mcnImageContent" style="display: flex;padding-right: 9px;padding-left: 9px;padding-top: 0;padding-bottom: 0;justify-content: flex-start;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
 
-        <a href="https://myitu.force.com/apply/TX_CommunitiesSelfReg" title="" class="" target="" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
+        <a href="https://admissions.itu.edu/#!/" title="" class="" target="" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
         <img alt="International Technological University" src="./Thank You General - International Technological University_files/0597eb3a-31e9-4350-9ebb-6f950f07982e.png" width="auto" style="max-width: 100%;align-self: center;flex: 0 0 auto;box-shadow: none;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;border: 0;height: auto;outline: none;text-decoration: none;vertical-align: bottom;box-sizing: border-box !important;max-height: 400px !important;" class="mcnImage">
         </a>
 
@@ -845,7 +845,7 @@ To complete the subscription process, please click the link in the email we just
 
 </div><div class="mcnButtonBlock mcnButtonBlockInner" style="display: flex;justify-content: flex-start;padding-top: 0;padding-right: 18px;padding-bottom: 18px;padding-left: 18px;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
     <div style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
-        <a id="0" class="mcnButtonContentContainer mcnButton " title="Apply Now!" href="https://myitu.force.com/apply/TX_SiteLogin?startURL=/apply/TargetX_Portal__PB" target="_self" style="font-weight: bold;letter-spacing: -0.5px;line-height: 100%;text-align: center;text-decoration: none;border-radius: 4px;background-color: #212832;box-shadow: none;padding: 18px;font-size: 16px;color: #FFFFFF;font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, Verdana, sans-serif;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;display: block;box-sizing: border-box !important;">Apply Now!</a>
+        <a id="0" class="mcnButtonContentContainer mcnButton " title="Apply Now!" href="https://admissions.itu.edu/#!/" target="_self" style="font-weight: bold;letter-spacing: -0.5px;line-height: 100%;text-align: center;text-decoration: none;border-radius: 4px;background-color: #212832;box-shadow: none;padding: 18px;font-size: 16px;color: #FFFFFF;font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, Verdana, sans-serif;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;display: block;box-sizing: border-box !important;">Apply Now!</a>
     </div>
 </div></div>
             </div>
