--- a/thank-you/Thank You General - International Technological University.html
+++ b/thank-you/Thank You General - International Technological University.html
@@ -2,7 +2,6 @@
 <!-- saved from url=(0051)https://universitydegrees.itu.edu/thank-you-general -->
 <html style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;height: auto;min-height: 100vh;box-sizing: border-box !important;" class="wf-roboto-n3-active wf-roboto-n4-active wf-roboto-n5-active wf-active">
 <head style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
-
 	
 <!-- Global site tag (gtag.js) - Google Ads: 657789664 -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-657789664"></script>
@@ -13,7 +12,15 @@
 
   gtag('config', 'AW-657789664');
 </script>
+
 	
+<script>
+  gtag('event', 'page_view', {
+    'send_to': 'AW-657789664',
+    'user_id': 'replace with value'
+  });
+</script>
+
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167795018-1"></script>
