Update Thank You General - International Technological University.html
Added Google Tag Manager Code

--- a/thank-you/Thank You General - International Technological University.html
+++ b/thank-you/Thank You General - International Technological University.html
@@ -2,7 +2,17 @@
 <!-- saved from url=(0051)https://universitydegrees.itu.edu/thank-you-general -->
 <html style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;height: auto;min-height: 100vh;box-sizing: border-box !important;" class="wf-roboto-n3-active wf-roboto-n4-active wf-roboto-n5-active wf-active">
 <head style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
-	
+
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-ND4KZDR');</script>
+<!-- End Google Tag Manager -->
+
+
 <!-- Global site tag (gtag.js) - Google Ads: 657789664 -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-657789664"></script>
 <script>
@@ -22,6 +32,9 @@
 </script>
 
 
+
+
+	
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167795018-1"></script>
 <script>
@@ -815,6 +828,12 @@ setTimeout(function () {
 <style data-styled="" data-styled-version="4.4.1"></style>
 </head>
     <body style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;height: auto;width: 100%;position: relative;min-height: 100vh;box-sizing: border-box !important;margin: 0 !important;padding: 0 !important;">
+	
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-ND4KZDR"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
+	    
         <div class="wrapper" style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;height: auto;min-height: 100vh;display: flex;flex-direction: column;box-sizing: border-box !important;">
             <div class="templateSection templateHeader" style="background:#FFFFFF none no-repeat center/cover;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;position: relative;display: flex;flex-shrink: 0;justify-content: center;padding-right: 36px;padding-left: 36px;background-color: #FFFFFF;background-image: none;background-repeat: no-repeat;background-position: center;background-size: cover;border-top: 0;border-bottom: 0;padding-top: 27px;padding-bottom: 27px;box-sizing: border-box !important;">
                 <div class="contentContainer templateColumn headerContainer" style="background:transparent none no-repeat center/cover;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;display: flex;flex-direction: column;max-width: 1224px;width: 100%;flex: 0 0 auto;background-color: transparent;background-image: none;background-repeat: no-repeat;background-position: center;background-size: cover;border-top: 0;border-bottom: 0;padding-top: 0;padding-bottom: 0;box-sizing: border-box !important;">
