Update Thank You General - International Technological University.html
Google Tracking Code Updated

--- a/thank-you/Thank You General - International Technological University.html
+++ b/thank-you/Thank You General - International Technological University.html
@@ -3,7 +3,6 @@
 <html style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;height: auto;min-height: 100vh;box-sizing: border-box !important;" class="wf-roboto-n3-active wf-roboto-n4-active wf-roboto-n5-active wf-active">
 <head style="-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box !important;">
 
-
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -11,7 +10,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-ND4KZDR');</script>
 <!-- End Google Tag Manager -->
-
 
 <!-- Global site tag (gtag.js) - Google Ads: 657789664 -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-657789664"></script>
@@ -23,18 +21,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   gtag('config', 'AW-657789664');
 </script>
 
-	
-<script>
-  gtag('event', 'page_view', {
-    'send_to': 'AW-657789664',
-    'user_id': 'replace with value'
-  });
-</script>
-
-
-
-
-	
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167795018-1"></script>
 <script>
@@ -44,8 +30,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   gtag('config', 'UA-167795018-1');
 </script>
-	
 
+<!-- Event snippet for Submit lead form conversion page -->
+<script>
+  gtag('event', 'conversion', {'send_to': 'AW-657789664/ici0CN3JlOIBEOCl1LkC'});
+</script>
+	
 <!-- Event snippet for Subscribe To MailChimp conversion page -->
 <script>
   gtag('event', 'conversion', {'send_to': 'AW-657789664/M7ncCPKT3tMBEOCl1LkC'});
